# Collision_tes

./: 7  README.md  analyze_edges.py  check_ch_enable.cpp  data_output.csv  edge_times.csv  plot_data.py  plot_live.py
src/: CMakeLists.txt  Encoder.cpp  Encoder.h  Sensor.cpp  Sensor.h
src/driver/: DeviceDriver.cpp  DeviceDriver.h  EncoderDriver.cpp  EncoderDriver.h  IDeviceDriver.h  IEncoderDriver.h
src/example/: BoundedQueue.h  SavitzkyGolay.h  main.cpp  main_enc.cpp
src/hal/: CustomProtocol.cpp  CustomProtocol.h  ModbusRTU.cpp  ModbusRTU.h  SerialPort.cpp  SerialPort.h
编码器开源/CH341SER_LINUX/CH341SER_LINUX/: .ch34x.o.d
编码器开源/源码开源/ER1C_DEMO - 20250909/: ER1CDEMO.APS  ER1CDEMO.rc  ER1C_DEMO.cpp  ER1C_DEMO.h  ER1C_DEMO.sln  ER1C_DEMO.vcxproj  ER1C_DEMO.vcxproj.filters  ER1C_DEMODlg.cpp  ER1C_DEMODlg.h  pch.h  resource.h
编码器开源/源码开源/ER1C_DEMO - 20250909/modbus-x64/: modbus.lib
编码器开源/源码开源/ER1C_DEMO - 20250909/modbus-x86/: modbus.lib
编码器开源/源码开源/ER1C_DEMO - 20250909/res/: ER1CDEMO.rc2
